--- a/WineShopClient/bin/assegnamento3/login.fxml
+++ b/WineShopClient/bin/assegnamento3/login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -21,7 +22,7 @@
       <HBox alignment="CENTER" prefHeight="20.0" prefWidth="200.0">
          <children>
             <Label text="Email:" />
-            <TextField id="emailTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="150.0">
+            <TextField id="emailTextField" fx:id="emailTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="150.0">
                <HBox.margin>
                   <Insets left="30.0" />
                </HBox.margin>
@@ -35,11 +36,11 @@
                   <Insets />
                </HBox.margin>
             </Label>
-            <TextField id="passwordTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="150.0">
+            <PasswordField fx:id="passwordTextField">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
-            </TextField>
+            </PasswordField>
          </children>
          <VBox.margin>
             <Insets top="10.0" />
@@ -47,7 +48,7 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button id="registerButton" mnemonicParsing="false" onAction="#register" text="Register">
+            <Button id="registerButton" fx:id="registerButton" mnemonicParsing="false" onAction="#register" text="Register">
                <HBox.margin>
                   <Insets right="20.0" />
                </HBox.margin>
