--- a/WineShopClient/bin/assegnamento3/reg_popup.fxml
+++ b/WineShopClient/bin/assegnamento3/reg_popup.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="474.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="23.0" layoutY="14.0" prefHeight="45.0" prefWidth="137.0" text="Registration">
@@ -25,7 +24,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField id="regSurameTextField" layoutX="23.0" layoutY="132.0" prefHeight="24.0" prefWidth="277.0" />
+      <TextField id="regSurnameTextField" layoutX="23.0" layoutY="132.0" prefHeight="24.0" prefWidth="277.0" />
       <Label layoutX="23.0" layoutY="158.0" prefHeight="24.0" prefWidth="137.0" text="Insert your email">
          <font>
             <Font size="14.0" />
