--- a/WineShopClient/src/assegnamento3/admin.fxml
+++ b/WineShopClient/src/assegnamento3/admin.fxml
@@ -17,8 +17,8 @@
         </columns>
       </TableView>
       <ChoiceBox id="adminChoiceBox" fx:id="adminChoiceBox" layoutX="34.0" layoutY="23.0" prefHeight="25.0" prefWidth="206.0" />
-      <Button id="admin_add_button" fx:id="addButton" disable="true" layoutX="494.0" layoutY="23.0" mnemonicParsing="false" onAction="#addSeller" text="Add" />
-      <Button id="admin_edit_button" fx:id="editButton" disable="true" layoutX="691.0" layoutY="23.0" mnemonicParsing="false" onAction="#editSeller" text="Edit" />
+      <Button id="admin_add_button" fx:id="addButton" disable="true" layoutX="621.0" layoutY="23.0" mnemonicParsing="false" onAction="#addSeller" text="Add" />
+      <Button id="admin_edit_button" fx:id="editButton" disable="true" layoutX="745.0" layoutY="23.0" mnemonicParsing="false" onAction="#editSeller" text="Edit" />
       <TableView id="adminWineTable" fx:id="adminWineTable" editable="true" layoutX="19.0" layoutY="106.0" prefHeight="271.0" prefWidth="763.0" visible="false">
          <columns>
             <TableColumn prefWidth="148.0" text="Name" />
@@ -36,5 +36,7 @@
             <TableColumn prefWidth="254.0" text="Amount" />
          </columns>
       </TableView>
+      <Button id="admin_add_button" fx:id="removeButton" disable="true" layoutX="672.0" layoutY="23.0" mnemonicParsing="false" onAction="#removeSeller" text="Remove" />
+      <Button id="admin_add_button" fx:id="refreshButton" layoutX="261.0" layoutY="23.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
    </children>
 </AnchorPane>
