--- a/WineShopClient/src/assegnamento3/home.fxml
+++ b/WineShopClient/src/assegnamento3/home.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
@@ -16,20 +17,21 @@
    <children>
       <AnchorPane prefHeight="87.0" prefWidth="603.0" style="-fx-focus-color: transparent;">
          <children>
-            <TextField fx:id="searchTextField" layoutX="122.0" layoutY="50.0" prefHeight="27.0" prefWidth="264.0" />
-            <Button fx:id="searchButton" defaultButton="true" layoutX="386.0" layoutY="51.0" mnemonicParsing="false" onAction="#search" text="Search" />
-            <Button fx:id="loginRegisterButton" layoutX="492.0" layoutY="26.0" mnemonicParsing="false" onAction="#loginRegister" text="Login/Register" />
+            <TextField fx:id="searchTextField" layoutX="136.0" layoutY="50.0" prefHeight="27.0" prefWidth="264.0" />
+            <Button fx:id="searchButton" defaultButton="true" layoutX="400.0" layoutY="51.0" mnemonicParsing="false" onAction="#search" text="Search" />
+            <Button fx:id="loginRegisterButton" layoutX="524.0" layoutY="10.0" mnemonicParsing="false" onAction="#loginRegister" prefHeight="62.0" prefWidth="61.0" text="Login  Register" wrapText="true" />
             <Label layoutX="255.0" layoutY="11.0" text="WineShop">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <RadioButton fx:id="nameRadioButton" layoutX="14.0" layoutY="30.0" mnemonicParsing="false" selected="true" text="Name">
+            <RadioButton fx:id="nameRadioButton" layoutX="10.0" layoutY="48.0" mnemonicParsing="false" scaleX="0.8" scaleY="0.8" selected="true" text="Name">
                <toggleGroup>
                   <ToggleGroup fx:id="searchToggleGroup" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="yearRadioButton" layoutX="14.0" layoutY="55.0" mnemonicParsing="false" text="Year" toggleGroup="$searchToggleGroup" />
+            <RadioButton fx:id="yearRadioButton" layoutX="10.0" layoutY="63.0" mnemonicParsing="false" scaleX="0.8" scaleY="0.8" text="Year" toggleGroup="$searchToggleGroup" />
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="75.0" layoutY="51.0" prefHeight="25.0" prefWidth="61.0" />
          </children>
       </AnchorPane>
       <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" minWidth="555.0" prefHeight="511.0" prefWidth="603.0" style="-fx-focus-color: transparent;" vbarPolicy="ALWAYS">
