--- a/WineShopClient/src/assegnamento3/admin.fxml
+++ b/WineShopClient/src/assegnamento3/admin.fxml
@@ -10,10 +10,10 @@
    <children>
       <TableView id="adminPersonTable" fx:id="adminPersonTable" editable="true" layoutX="19.0" layoutY="106.0" prefHeight="271.0" prefWidth="763.0">
         <columns>
-          <TableColumn prefWidth="190.0" text="Name" />
-          <TableColumn prefWidth="190.0" text="Surname" />
-            <TableColumn prefWidth="190.0" text="Email" />
-            <TableColumn prefWidth="192.0" text="Password" />
+          <TableColumn prefWidth="190.0" resizable="false" text="Name" />
+          <TableColumn prefWidth="190.0" resizable="false" text="Surname" />
+            <TableColumn prefWidth="190.0" resizable="false" text="Email" />
+            <TableColumn prefWidth="192.0" resizable="false" text="Password" />
         </columns>
       </TableView>
       <ChoiceBox id="adminChoiceBox" fx:id="adminChoiceBox" layoutX="34.0" layoutY="23.0" prefHeight="25.0" prefWidth="206.0" />
@@ -21,22 +21,23 @@
       <Button id="admin_edit_button" fx:id="editButton" disable="true" layoutX="745.0" layoutY="23.0" mnemonicParsing="false" onAction="#editSeller" text="Edit" />
       <TableView id="adminWineTable" fx:id="adminWineTable" editable="true" layoutX="19.0" layoutY="106.0" prefHeight="271.0" prefWidth="763.0" visible="false">
          <columns>
-            <TableColumn prefWidth="148.0" text="Name" />
-            <TableColumn prefWidth="128.0" text="Producer" />
-            <TableColumn prefWidth="48.0" text="Year" />
-            <TableColumn prefWidth="248.0" text="Technical Notes" />
-            <TableColumn prefWidth="124.0" text="Grape Type" />
-            <TableColumn prefWidth="66.0" text="Amount" />
+            <TableColumn prefWidth="148.0" resizable="false" text="Name" />
+            <TableColumn prefWidth="128.0" resizable="false" text="Producer" />
+            <TableColumn prefWidth="48.0" resizable="false" text="Year" />
+            <TableColumn prefWidth="248.0" resizable="false" text="Technical Notes" />
+            <TableColumn prefWidth="124.0" resizable="false" text="Grape Type" />
+            <TableColumn prefWidth="66.0" resizable="false" text="Amount" />
          </columns>
       </TableView>
       <TableView id="adminPersonTable" fx:id="adminOrderTable" editable="true" layoutX="19.0" layoutY="106.0" prefHeight="271.0" prefWidth="763.0">
          <columns>
-            <TableColumn prefWidth="254.0" text="Customer Email" />
-            <TableColumn prefWidth="254.0" text="Wine" />
-            <TableColumn prefWidth="254.0" text="Amount" />
+            <TableColumn prefWidth="254.0" resizable="false" text="Customer Email" />
+            <TableColumn prefWidth="254.0" resizable="false" text="Wine" />
+            <TableColumn prefWidth="254.0" resizable="false" text="Amount" />
          </columns>
       </TableView>
       <Button id="admin_add_button" fx:id="removeButton" disable="true" layoutX="672.0" layoutY="23.0" mnemonicParsing="false" onAction="#removeSeller" text="Remove" />
       <Button id="admin_add_button" fx:id="refreshButton" layoutX="261.0" layoutY="23.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
+      <Button fx:id="logoutButton" layoutX="411.0" layoutY="23.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
    </children>
 </AnchorPane>
